HelloUltraviolet/Fixtures/RejectedSource/Procedures/RecordMethodReceiverNotSelf/Expected.uv
//! Expected diagnostic metadata for the RecordMethodReceiverNotSelf rejected-source specimen.

expectedDiagnostic("", "rule.15.Record-Method-RecvSelf-Err")
